--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="WWR is a student-designed project web app that allows users to select and listen to the myriad radio waves that surround the globe."
+      content="First created as a student project, WWR is a web app that allows users to browse and listen to radio stations broadcasted from all corners of the world."
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
