--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,10 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
       content="WWR is a web app that allows users to browse and listen to radio stations broadcasted from all corners of the world."
     />
+    <meta name="keywords"
+    content="world radio"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
