Suggestions implement and other fixes ie menu

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
 
     <meta name="theme-color" content="#000000" />
 
@@ -15,10 +18,9 @@
       name="description"
       content="WWR is a web app that allows users to browse and listen to radio stations broadcasted from all corners of the world."
     />
-    <meta name="keywords"
-    content="world radio"/>
+    <meta name="keywords" content="world radio" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.io" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
