--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
 
 
     
